<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/bg_discount">

    <!--    头部：-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:id="@+id/back"
            style="@style/text2"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jifen"
            style="@style/text1"
            android:textAlignment="center" />


    </LinearLayout>

    <!--中间-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ling"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ling"
                android:layout_marginStart="70dp"
                android:text="@string/jifenn"
                android:textColor="@color/white"
                android:textSize="20sp"

                />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:textSize="12sp"
                android:layout_alignBottom="@+id/ling"
                android:layout_marginStart="120dp"
                android:background="@drawable/bt1"

                android:text="@string/details"
                android:textColor="@color/white"

                />

            <Button
                android:id="@+id/pay_bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="我的钱包"
                android:layout_marginLeft="300dp"
                android:layout_alignBottom="@+id/ling"
                >

            </Button>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/l1">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    style="@style/text2"/>
                <TextView

                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nowjifen"
                    android:textAlignment="center"
                    style="@style/text2"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geduan"
                android:layout_marginStart="90dp"
                style="@style/text1"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignBottom="@id/l1"
                android:layout_marginStart="120dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    style="@style/text2"/>
                <TextView

                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/benyueguoqi"
                    android:textAlignment="center"
                    style="@style/text2"/>

            </LinearLayout>



        </RelativeLayout>
    </LinearLayout>

    <!--    下半部分-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/bg1">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/renwuhuanjifen"
            style="@style/text3"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/mycode_linebg"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newuserszhuce" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jia80jifen"
                        style="@style/text4"
                        />
                </LinearLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yaoqing" />


            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/gofinish"
                style="@style/text2"

                android:background="@drawable/bg3"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/mycode_linebg"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cheliangshimingrenzheng" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jia50jifen"
                        style="@style/text4"
                        />
                </LinearLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstidentify" />


            </LinearLayout>

            <Button
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/bg3"

                android:text= "@string/gofinish"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/mycode_linebg"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onlinejiaofei" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jia1jifen"
                        style="@style/text4"
                        />
                </LinearLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yiyuanyijifen" />


            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gofinish"
                style="@style/text2"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="75dp"
                android:background="@drawable/bg3"/>

        </LinearLayout>






    </LinearLayout>

</LinearLayout>


